# spin_lattice_utils

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: motion_narrowing.py  one_spin_bo.py  pre_compute_bath_inputs.py  two_spin_bo.py  two_spin_bo_quad.py
examples/motional_narrowing/: 00.input.json  01.input.json  bose_linear_2.out  input.json  kernel_bose_linear_2.out  run_kernel.sh
spin_lattice_utils/: deom_ctrls.py  gen_deom_inp_bo.py  interaction_scheme.py  math_utils.py  misc_utils.py  motional_narrowing.py  params_base.py  units.py
spin_lattice_utils/one_spin/: __init__.py  spin_lattice_params.py
spin_lattice_utils/pre_decomposed_spectrum_data/: BO-λ_0.003-OmegaB_3.0-zeta_1.0.npz
spin_lattice_utils/spectral_functions/: __init__.py  bose_spectral_function.py  brownian_spectral_function.py  decomposition.py
spin_lattice_utils/two_spins/: __init__.py  alignment.py  spin_lattice_params.py  spin_spin_type.py
test/: test_units.py
